# word-counter-AI

./: README.md  pyproject.toml
src/word-counter-AI/: count_words.py
word-counter-AI/: count_words.py
word_counter_AI/: __init__.py  count_words.py
